--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -1,6 +1,7 @@
 .wrapper {
-  padding: 20px;
-  display: flex;
+  height: "100%";
+  minHeight: "100%";
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center; */
 }
