chore(layout): Fix layout styling

--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -1,7 +1,11 @@
 .wrapper {
+  maxWidth: "100%";
+  width: "100%";
   height: "100%";
   minHeight: "100%";
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content: center; */
+  justify-content: center;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
